Fixes bug with narrow vieport and better vertical alignment

--- a/app/assets/stylesheets/haikuify.scss
+++ b/app/assets/stylesheets/haikuify.scss
@@ -11,7 +11,7 @@ body {
 
 #haiku-widget {
   margin: auto;
-  width: 20em;
+  margin-top: 7em;
 
   h2 {
     text-align: center;
